# integral_concurrently

./: CMakeLists.txt  Plot 12.html  additional.cpp  additional.h  compare_script.cpp  config.cpp  config.h  configurations.h  integrate.cpp  integrate.h  main  main.cpp  time_measure.cpp  time_measure.h
docs/: comparison.txt  tune_num_steps_example.txt
